@@ -90,6 +90,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15232: when mangle_from is True, email.Generator now correctly mangles
+  lines that start with 'From' that occur in a MIME preamble or epilog.
+
 - Issue #13922: argparse no longer incorrectly strips '--'s that appear
   after the first one.
 
